--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
   <title>My Portfolio</title>
 </head>
 <body>
-    <header><img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
-      <nav>
-        <a>HREF=Resume</a>
-        <a>HREF=      
-
-      </NAV>
-    <nav>"Resume"</nav><nav>"About Me"</nav><nav>"My Blog"</nav></nav><a class="has-border">Contact Me</a></header>
-    <main>
-        <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
-        <h1>Fagner Henrique Flores</h1>
-        <h2>Student of Web Development</h2>    
-        <button id="portfolio">Portfolio</button>
-      <a class="small-text" href="https://austincodingacademy.com/">© Austin Coding Academy</a>
-      </main>
-    </body>
+  <header>
+    <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
+    <nav>
+      <a href="Resume"> Resume</a>
+      <a href="About Me">about me</a>      
+      <a href="My Blog">my blog</a>
+      <a class="has-border">Contact Me</a>
+    </nav>
+  </header>
+  <main>
+      <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
+      <h1>Fagner Henrique Flores</h1>
+      <h2>Student of Web Development</h2>    
+      <button id="portfolio">Portfolio</button>
+    <a class="small-text" href="https://austincodingacademy.com/">© Austin Coding Academy</a>
+  </main>
+</body>
 </html>
-    
