--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <main>
       <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
       <h1>Fagner Henrique Flores</h1>
-      <h2>Student of Web Development</h2>    
+      <h2>Student of Web Development</h2>
+      <p>i'm motivated</p>    
       <button id="portfolio">Portfolio</button>
     <a class="small-text" href="https://austincodingacademy.com/">© Austin Coding Academy</a>
   </main>
