--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <a href="Resume"> Resume</a>
       <a href="About Me">about me</a>      
-      <a href="My Blog">my blog</a>
+      <a href="./src/blog/blog.html">my blog</a>
       <a class="has-border">Contact Me</a>
     </nav>
   </header>
